Added a script installer for Foswiki, a TWiki fork.
Added options to the Module Config page for defining a link to additional documentation on the System Information page.
Added an option to the Magento script installer to setup sample data.
The website documents directory for a virtual server can be changed from public_html on the Website Options page, and using the modify-web API command.
---- Changes since 3.79 ----
Updated the ZenCart script installer to version 1.3.9e, Coppermine to 1.5.8, MoinMoin to 1.8.8, Moodle to 1.9.9, Magento to 1.4.1.1, Trac to 0.12, Z-Push to 1.4, WordPress to 3.0.1, SugarCRM to 6.0.0, Piwik to 0.9, Simple Invoices to 2010.2-update1, Bugzilla to 3.6.2, Radiant to 0.9.1, phpMyFAQ to 2.6.7, phpMyAdmin 3.3.5, Redmine to 1.0.0, CMS Made Simple to 1.8.1, PHPList to 2.11.5, Joomla to 1.5.20, Instiki to 0.18.1, Squirrelmail to 1.4.21, Typo to 5.5, MediaWiki to 1.16.0, Mantis to 1.2.2, RoundCube to 0.4, phpBB to 3.0.7-PL1, ZenPhoto to 1.3.1, and TikiWiki to 4.3.
Alias domain DNS records are now copied from the target domain at creation time, rather than being created from the selected template.
S3 backups can now be use the new reduced redundancy storage option, which is cheaper but less reliable.
Internationalized domain names are no longer converted to UTF-8 for output from API commands, to avoid the perl "wide character in print" warning.
The interval between bandwidth monitoring cron job runs can now be configured.
---- Changes since 3.80 ----
Updated the Drupal script installer to versions 5.23 and 6.19, CMS Made Simple to 1.8.2, Z-push to 1.4.1, Webcalendar to 1.2.3, ZenCart to 1.3.9f, and PHProjekt to 6.0.3.