@@ -184,3 +184,4 @@ max_manual=0
 trash_folder=trash
 upload_tries=3
 backuplog_days=7
+pbzip2=0
