@@ -1,0 +1,9 @@
+<header>Bzip2 compression command</header>
+
+If your system has the multi-threaded bzip2 compression command <tt>pbzip2</tt>
+installed, this option can be used to have Virtualmin use it. On a multi-core
+system it runs faster than regular <tt>bzip2</tt>, but uses more CPU overall.
+<p>
+
+<footer>
+
